# Social-xLSTM

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  Snakefile  config.yaml  debug_scaler_details.py  debug_scaling_issue.py  environment.yaml  pyproject.toml  pytest.ini  quick_train_social_pooling.sh  setup.py  test_comprehensive_scaling.py  test_scaling_fix.py  todo.md  vd_data_quality_report.md
.claude/agents/: comment-translator.md
.github/workflows/: architecture-governance.yml
cfgs/: README.md
cfgs/data/: standard.yaml
cfgs/datasets/: pems_bay.yaml  pems_bay_fast_test.yaml  taiwan_vd.yaml
cfgs/models/: lstm.yaml  xlstm.yaml
cfgs/profiles/: metr_la_dev.yaml  (+4 more)
docs/: MIGRATION_REPORT.md  QUICK_START.md  README.md  data-quality-remediation-plan.md  data_format.md  docs_reorganization_analysis.md  integration_summary.md  next_session_tasks.md  todo.md
docs_legacy/: PROJECT_STATUS.md  README.md
docs_rebuild/: MIGRATION_REPORT.md  README.md
examples/: social_pooling_visual_demo.py  social_traffic_model_example.py  test_spatial_only_config.py  test_xlstm_dimensions.py
maintenance/: cleanup-report.md  md-files-cleanup-plan.md
scripts/: benchmark_distributed_memory.py  check_architecture_rules.py  doc_sync.py  quick-dev-check.sh  test_distributed_basic.py  test_distributed_simple.py  test_spatial_integration.py  test_training_script.py  train_distributed_social_xlstm.py
test/: test_vd_selection.py  test_vd_selection_real_data.py
tests/: conftest.py  pytest.ini
tools/: README.md
workflow/: snakemake_warp.py
(+306 files in other folders)
