[project]
name = "social-xlstm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "h5py>=3.14.0",
    "numpy<2.0.0",
    "py7zr>=1.0.0",
    "pytest>=8.4.2",
    "pytorch-lightning>=2.5.5",
    "scikit-learn>=1.7.2",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "tqdm>=4.67.1",
    "xlstm>=2.0.5",
]
